--- a/VRChat/24/1223924.html
+++ b/VRChat/24/1223924.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QBhFq1BSw/16F3P4CZceB65CWqnLPgcDb+0ry/SuLLs="></script>
+    "ZKEtxLHoevK/JIk7AD3/uFPLF0jC9lBqSnV0O/7doGI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向けアバター（Vマケ2）】ケモアバター「ハル」v1.0【SDK2】","description":"【VRChat向けアバター（Vマケ2）】ケモアバター「ハル」v1.0※マテリアル修正しました!2/12\n■モデル概要\nVRchat向けのUnity上ですでに設定されている3Dモデルです。\nオリジナルモデルの白ねこの「はる」です。\n今回はバーチャルマーケット2にも出店予定のモデルとなります。\n※【SDK2】SDK3ではないのでご自身で設定する必要がございます。※Arktoon-Shadersを事前に導入推奨のモデルです。\n\n各所に揺れ設定されています。\n※揺らす場合はDynamicボーンが導入されている必要があります。\n\n◆更新履歴◆\n2019/02/12 マテリアルを再適用、説明文画像を追加\n\n●はじめての導入する方向け\n\n 1.まずはじめに事前にArktoon-Shadersを導入してください。導入方法はリンク先の「Clone or download」＞「Download ZIP」＞ダウンロードしたZIPファイルを解凍\n　　　＞UnityのAssetsに解凍したフォルダの中の「arktoon Shadersフォルダ」をAssetに入れればOKです。\n   Arktoon-Shadersダウンロード先リンク\n　　https://github.com/synqark/Arktoon-Shaders\n※Arktoon-Shadersが更新されるとうまくエラーが出る場合がございます。\n\n 2.Haru_v1.0.unitypackageをダブルクリックすると一括で設定ファイルごと読み込まれます。\n\n 3.Sceneファイルの「haruv1.0」を開いて中の設定済みのモデルをUploadすればすぐに使用できます。\n\n■同梱データ\n○一括導入用パッケージ(UnityPackage)\n○FBX（モデルデータ）\n○Tex（画像データ）\n○Readme\n\n■データ詳細\n・VRChat用アニメーション(Lip Sync一式(MMD対応表情あり)・ウインク・笑顔・ハート目)\n\n■利用規約について\n・著作権は放棄していません。\n・VR空間、配信、動画媒体での商用利用は個人、法人に限らず可能。\n・改変、改造は可能。\n・未改変、未改造、さらに改変後、改造後での再配布、転売は禁止。\n・宗教的、政治的に使用禁止。\n\n■免責事項 \n・本データの利用において、何らかのトラブル、\n　損失が生じたとしても当方は一切の責任を負いません。\n\n・利用規約についての内容は予告なく変更する場合があります。\n\n■バージョン履歴\n2019/2/11 1.0公開。","url":"https://booth.pm/ja/items/1223924","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/985386bb-bc6d-41c5-b70d-4286e61a3033/i/1223924/e21d4d5d-dd8d-4094-a60e-1893c7aa445e_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QBhFq1BSw/16F3P4CZceB65CWqnLPgcDb+0ry/SuLLs="></script>
+    nonce="ZKEtxLHoevK/JIk7AD3/uFPLF0jC9lBqSnV0O/7doGI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -133,7 +132,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,7 +174,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1223924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               156
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1223924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               156
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
