--- a/VRChat/34/1223834.html
+++ b/VRChat/34/1223834.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+QmbpRarPE+3N5m4ZZUDJMykpyCg+sh/0u8SJOouRXY="></script>
+    "Ps2lyt4Xa70ZSozPBVLQT4iw+HEYAEE1xhuLl42msYU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】椛重工製ライフル「VAC300」","description":"概要\nVRChat向け架空銃モデルです。\nゲーム制作、CG制作等にも使用可能です。\nM4をイメージして作成しています。\n発射AnimationやParticleは付属しません。\n\nアニメーションや追加オプションなど後日追加予定ですので気長にお待ちいただければ幸いです。\n\n\n同梱内容\n1.UnityPackage\n\n\n利用規約\n・商用利用可\n・モデル改変可\n・VRCにおける映像画像使用可\n禁止事項\n・モデルの二次配布禁止\n・自作と表記、発言禁止\n・モデル改変後配布禁止\n・ペデスタル(ワールド設置)禁止\n上記の項目は利用をもって同意とさせていただきます。","url":"https://booth.pm/ja/items/1223834","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/5544fd70-c10d-4d88-8dbd-f13e2224733e/i/1223834/5551efb2-c8ae-4c98-8eed-14b3d1c749bb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+QmbpRarPE+3N5m4ZZUDJMykpyCg+sh/0u8SJOouRXY="></script>
+    nonce="Ps2lyt4Xa70ZSozPBVLQT4iw+HEYAEE1xhuLl42msYU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1223834/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               199
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1223834/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               199
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
