--- a/VRChat/54/1223654.html
+++ b/VRChat/54/1223654.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MvppMjKLzUJWx9Iej6GsMa2zy47ZbSMD3IhZh56PF2Y="></script>
+    "GJc+1oQ/c+TFwHRYKUFNcJFj6jPZK5N7rWcL/DacWKc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ダンボール","description":"いろいろな形のダンボールです。\n\nVRChatやゲーム開発用のアセットにどうぞ。\n\n内容物\n・シンプル（茶、白）\n・汚れたもの（いくつか）\n・ガムテープされたもの（はがされたもの）\n・Amaz○n\n・Fed○x\n・ゆうパッ○\n・佐川急○\n\nポリゴン数は60～108まで。\nUV展開済み。\nテクスチャは1024x1024px。\nダンボールの形に関わらず同じテクスチャが使えます。\n\nファイル形式\n・fbxファイル\n・blendファイル(バージョン2.79版)\n\n\n--------------------\n\n【利用規約】\n下記の利用規約に同意した場合にのみ購入してください。\n\n可能なこと\n・VRChatやゲーム等への組み込み\n・xR、メタバース上での利用\n・そのほか動画や静止画への利用、公開、販売\n・モデルの改造\n・商用利用\n ※Amaz○n等、会社名が入ったものは商用利用をお控えください。\n\n禁止すること\n・当データをBOOTHや他のサイトで3Dデータとして販売\n　（無償提供も含む）\n・NFTとしての販売（応相談）\n\n免責\n・このモデルを利用することで発生した問題について当方は一切の責任を負いません。\n\n","url":"https://booth.pm/ja/items/1223654","offers":{"priceCurrency":"JPY","@type":"Offer","price":"240"},"image":"https://booth.pximg.net/c/620x620/d641cff2-c5ca-40b4-9130-5e88a73e9182/i/1223654/308159ca-45b4-4b4b-a285-85425dd91ec9_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MvppMjKLzUJWx9Iej6GsMa2zy47ZbSMD3IhZh56PF2Y="></script>
+    nonce="GJc+1oQ/c+TFwHRYKUFNcJFj6jPZK5N7rWcL/DacWKc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1223654/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1223654/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
