--- a/VRChat/97/1222597.html
+++ b/VRChat/97/1222597.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OLRoVKNh68hK+20V6gSEkOOUZta1lAtIhrfWDnxZEkg="></script>
+    "+7w1T7sGnMUhKZFIMfoIR7F8i71swtoLlSQdgy+Pd8o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けオリジナルアバター『ツィスカ(Ziska)』","description":"Humanoid対応のオリジナルモデル「ツィスカ(Ziska)」です。\n\n●基本的に『Dynamic Bone』でいろんな部分を揺らすことを前提としているので、別途『Dynamic Bone』をお買い求めください。\n\n●VRChatでのフルトラッキングは検証していないのですが、対応できるとの報告を受けているので是非ご利用ください。\n\n●本モデルは【ユニティちゃんトゥーンシェーダー 2.0 / UTS2 v.2.0.5】を使用しています。\n\n●モデル概要\n　・△ポリゴン数：19,336\n　・マテリアル数：6\n　・テクスチャ枚数：22枚\n　・Humanoid Rig対応\n　・VRCリップシンク対応\n　・Dynamic Bone設定済\n　・自動瞬き設定済\n　・一部アニメーションオーバーライド設定済\n　・その他各種表情系シェイプキー同梱\n\n●内容物\n\n　・UnityPackage\n　・使い方.txt\n　・利用規約.txt","url":"https://booth.pm/ja/items/1222597","offers":{"priceCurrency":"JPY","@type":"Offer","price":"30000"},"image":"https://booth.pximg.net/c/620x620/b6334ced-5e5e-4d54-a755-a52e7eff9591/i/1222597/1db90960-56af-40a3-a9e7-6bd65c7caaf0_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OLRoVKNh68hK+20V6gSEkOOUZta1lAtIhrfWDnxZEkg="></script>
+    nonce="+7w1T7sGnMUhKZFIMfoIR7F8i71swtoLlSQdgy+Pd8o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1222597/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               244
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1222597/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               244
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
