--- a/VRChat/36/1223136.html
+++ b/VRChat/36/1223136.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QV8AF1BOjevNp+clnYTMGLFRoEcuXgyYwp/n79hJuag="></script>
+    "mZIjlp6q2h4sWISNicOBGIrabGxEaqXTHzvoCdvoL+4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCHATのほん","description":"VRChatのかわいいフレンド達を描いたイラスト集を作りました!\nみんな可愛いので是非見てくださいね。\n\n‐‐‐‐‐‐2020/02/06追記‐‐‐‐‐‐\n\n電子書籍版に高解像度版PDFを追加しました！\n\n\n‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐\n\n電子書籍版追加しました！\n\n全18ページ\nPDFファイル","url":"https://booth.pm/ja/items/1223136","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1223136/ff63a157-73f2-4989-a3bf-f018c82be30a_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QV8AF1BOjevNp+clnYTMGLFRoEcuXgyYwp/n79hJuag="></script>
+    nonce="mZIjlp6q2h4sWISNicOBGIrabGxEaqXTHzvoCdvoL+4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -178,7 +178,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1223136/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               93
@@ -193,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1223136/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               93
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
