--- a/VRChat/16/1223016.html
+++ b/VRChat/16/1223016.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UubrR8hNHfxwAJEFdRMDUVOeyRLgSYri2/ku4ZXQ9UQ="></script>
+    "byCHoSmQxeNRec2Vspk1bkSuT+hRDHrcdfoVnZcPLt0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"狙撃銃 ASR-00","description":"三角ポリゴン：2200ポリゴン（1モデルあたり）\n（updateなどで若干誤差が出る可能性があります）\n\n装着するモデルによってshaderが異なる為、\nFBX形式で頒布していますので、Material設定が必要になります。\n\n付属品（模様あり・模様無し2モデルのセットです。）\n模様あり：fbxモデル　テクスチャ用png１枚（1024pixel）\n模様無し：fbxモデル　テクスチャ用png１枚（1024pixel）\n編集用PSD（2048pixel）\n\n標準では1024pixelのテクスチャが入っています。\n付属PSDは2048pixelになっていますので、高解像度が必要・好みのサイズを作りたい場合は其方をご利用ください。\n不要な部分だけ模様を消したりすることも出来ます。\n\n透過テクスチャを使用していないため、スコープは覗けませんのでご注意ください。\n\n銃器に関しては素人が作っているので実際の銃の構造と異なっている可能性があります。","url":"https://booth.pm/ja/items/1223016","offers":{"priceCurrency":"JPY","@type":"Offer","price":"150"},"image":"https://booth.pximg.net/c/620x620/679d00c5-3e09-411d-9a44-d32751ce260e/i/1223016/c210b4c8-b19e-42b7-8983-11ecc9cf5e7e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UubrR8hNHfxwAJEFdRMDUVOeyRLgSYri2/ku4ZXQ9UQ="></script>
+    nonce="byCHoSmQxeNRec2Vspk1bkSuT+hRDHrcdfoVnZcPLt0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1223016/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               254
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1223016/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               254
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
